--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
     "react-map-gl": "^6.1.16",
+    "react-popupbox": "^2.0.8",
     "react-scripts": "^4.0.3",
+    "react-share": "^4.4.0",
     "react-typed": "^1.2.0",
     "web-vitals": "^1.1.2"
   },
